--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.5 Managing People.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.5 Managing People.md
@@ -1,79 +1,84 @@
----
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-### **模块核心主题：危机下的多维管理艺术**  
+### 课程4.5 危机下的多维管理艺术
+
 通过Charles Schwab公司CEO David Pottruck的激进变革案例，揭示**向上管理、跨层级共识构建与文化符号运用**在组织架构调整中的关键作用。
 
----
 
-### **关键策略与行动拆解**
-#### **1. 向上管理：创始人Charles Schwab的说服术**
-• **数据穿透情感**：  
-  用航空业类比（70%机票降价需同步削减成本）将抽象风险（股价下跌）转化为可量化模型（预测25%利润跌幅），弱化创始人对财务损失的抗拒。
-• **信任账户管理**：  
-  通过长期透明沟通（如定期解释e.Schwab试点数据）积累信任资本，最终兑现为对创始人5亿美元潜在损失的决策背书。
+#### 1. 向上管理：创始人Charles Schwab的说服术
 
-#### **2. 董事会动员：从审批者到同盟军**
-• **预演式沟通**：  
-  提前与关键董事一对一沟通（如退休基金代表），将董事会会议转化为“共识确认”而非“辩论战场”，2.5小时快速通过议案。
-• **风险切割设计**：  
-  提出“分阶段问责制”——董事会监督战略方向，管理层负责执行细节，化解董事对操作风险的担忧。
+- **数据穿透情感**: 
+  - 用航空业类比（70%机票降价需同步削减成本）将抽象风险（股价下跌）转化为可量化模型（预测25%利润跌幅），弱化创始人对财务损失的抗拒。
+- **信任账户管理**: 
+  - 通过长期透明沟通（如定期解释e.Schwab试点数据）积累信任资本，最终兑现为对创始人5亿美元潜在损失的决策背书。
 
-#### **3. 中层突破：从秘密到使命**
-• **信息双轨管控**：  
-  • **保密层**：核心200人签署保密协议，以“金门大桥早餐会”隔离信息泄露风险；  
-  • **叙事层**：通过历史隐喻（变革如建桥）将价格战重构为“历史性跨越”，激发使命感。  
-• **阻力预消化工作坊**：  
-  跨职能小组模拟员工质疑（如“薪资能否保障？”），预研话术库（如“客户增长将抵消降价损失”）。
+#### 2. 董事会动员：从审批者到同盟军
 
-#### **4. 文化符号植入：认知与情感的共振**
-• **仪式性行动**：  
-  组织穿越金门大桥徒步，统一蓝色夹克与合影（“跨越鸿沟”）成为文化图腾，将“变革阵痛”转化为“集体荣耀”。
-• **压力柔性传导**：  
-  David公开自嘲“婴儿般睡眠”（每两小时哭醒），柔化权威形象，增强团队共情。
+- **预演式沟通**:
+  - 提前与关键董事一对一沟通（如退休基金代表），将董事会会议转化为「共识确认」而非「辩论战场」，2.5小时快速通过议案。
+- **风险切割设计**：  
+  - 提出「分阶段问责制」——董事会监督战略方向，管理层负责执行细节，化解董事对操作风险的担忧。
 
----
+#### 3. 中层突破：从秘密到使命
 
-### **变革八步法的实战升级（Kotter模型+Schwab案例）**
+- **信息双轨管控**:
+  - **保密层**: 核心200人签署保密协议，以「金门大桥早餐会」隔离信息泄露风险； 
+  - **叙事层**: 通过历史隐喻（变革如建桥）将价格战重构为「历史性跨越」，激发使命感。  
+- **阻力预消化工作坊**:
+  - 跨职能小组模拟员工质疑（如「薪资能否保障？」），预研话术库（如「客户增长将抵消降价损失」）。
+
+#### 4. 文化符号植入：认知与情感的共振
+
+- **仪式性行动**:
+  - 组织穿越金门大桥徒步，统一蓝色夹克与合影（「跨越鸿沟」）成为文化图腾，将「变革阵痛」转化为「集体荣耀」。
+- **压力柔性传导**:  
+  - David公开自嘲「婴儿般睡眠」（每两小时哭醒），柔化权威形象，增强团队共情。
+
+#### 5. 变革八步法的实战升级（Kotter模型+Schwab案例）
+
 | **步骤**               | **传统实践**                  | **Schwab创新**                          |
 |------------------------|-----------------------------|----------------------------------------|
-| **建立紧迫感**          | 行业数据对比                  | "E-Trade增长模拟推演" + 客户漏洞数据可视化     |
+| **建立紧迫感**          | 行业数据对比                  | E-Trade增长模拟推演 + 客户漏洞数据可视化     |
 | **组建领导联盟**        | 高管团队签署承诺书              | 创始人站台 + 董事会预沟通 + 核心200人"秘密部落"  |
-| **设计愿景**            | 发布战略宣言                  | "金门大桥"符号体系 + "全美投资民主化"口号       |
+| **设计愿景**            | 发布战略宣言                  | 「金门大桥」符号体系 + 「全美投资民主化」口号       |
 | **沟通愿景**            | 全员邮件/会议                 | 跨职能阻力工作坊 + 桥梁徒步的沉浸式体验          |
 | **赋能行动**            | 调整KPI                     | 允许区域团队自定义成本削减方案（30%自主权）       |
-| **创造短期胜利**         | 庆祝阶段性成果                | 发布"首日客户增长数据"（非财务指标）缓解焦虑      |
+| **创造短期胜利**         | 庆祝阶段性成果                | 发布「首日客户增长数据」（非财务指标）缓解焦虑      |
 | **巩固成果**            | 组织架构调整                 | 将徒步照片设为内网登录页，新员工培训必修案例       |
-| **文化制度化**          | 修订价值观手册               | "桥梁精神"纳入晋升标准（30%权重评估变革贡献）     |
+| **文化制度化**          | 修订价值观手册               | 「桥梁精神」纳入晋升标准（30%权重评估变革贡献）     |
+
+#### 6. 领导力启示
+
+1. **权力地图绘制术**
+   1. **影响力节点分析**：  
+  识别「隐性否决者」（如Schwab家族信托顾问），通过非正式渠道（高尔夫球会、慈善董事会）提前化解阻力。
+   2. **情绪账户管理**：  
+  对创始人采用「1份数据+2份情怀」沟通比例（如回忆创业初期风险决策）。
+
+2. **变革语言重构**
+   1. **去财务化叙事**：  
+      1. 将「70%降价」表述为「客户资产自由计划」，避免触发员工的收入焦虑。
+   2. **技术术语封装**：  
+      1. 用「桥梁螺栓」比喻成本削减点（「每个部门找到3颗可卸螺栓」），让裁员敏感议题中性化。
+
+3. **压力释放设计**
+   1. **安全阀机制**：  
+      1. 设立「变革申诉期」——宣布后30天内允许匿名质疑，由外部咨询公司汇总反馈，缓解集体焦虑。
+   2. **牺牲可视化**：  
+      1. 管理层集体降薪10%（早于全员调整），前台展示薪酬变动图表，传递「责任共担」信号。
 
 ---
 
-### **领导力启示**
-#### **1. 权力地图绘制术**
-• **影响力节点分析**：  
-  识别“隐性否决者”（如Schwab家族信托顾问），通过非正式渠道（高尔夫球会、慈善董事会）提前化解阻力。
-• **情绪账户管理**：  
-  对创始人采用“1份数据+2份情怀”沟通比例（如回忆创业初期风险决策）。
+#### 核心洞见
 
-#### **2. 变革语言重构**
-• **去财务化叙事**：  
-  将“70%降价”表述为“客户资产自由计划”，避免触发员工的收入焦虑。
-• **技术术语封装**：  
-  用“桥梁螺栓”比喻成本削减点（“每个部门找到3颗可卸螺栓”），让裁员敏感议题中性化。
-
-#### **3. 压力释放设计**
-• **安全阀机制**：  
-  设立“变革申诉期”——宣布后30天内允许匿名质疑，由外部咨询公司汇总反馈，缓解集体焦虑。
-• **牺牲可视化**：  
-  管理层集体降薪10%（早于全员调整），前台展示薪酬变动图表，传递“责任共担”信号。
+**架构变革的本质是重写集体记忆。**  
+David Pottruck通过「金门大桥神话」的创造，将一场可能被铭记为「灾难性降价」的事件升华为企业史诗。这揭示：当物理架构（汇报线、薪酬体系）调整时，唯有同步重塑**文化架构**（符号、仪式、英雄故事），才能将变革从「不得不做的代价」转化为「引以为傲的传统」。
 
 ---
 
-### **核心洞见**
-**“架构变革的本质是重写集体记忆。”**  
-David Pottruck通过“金门大桥神话”的创造，将一场可能被铭记为“灾难性降价”的事件升华为企业史诗。这揭示：当物理架构（汇报线、薪酬体系）调整时，唯有同步重塑**文化架构**（符号、仪式、英雄故事），才能将变革从“不得不做的代价”转化为“引以为傲的传统”。
+### 附录：字幕
 
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 4: Designing and Changing the Organization's Architecture
@@ -128,3 +133,4 @@ Epilogue. January 15th. It is a shock. It is a well-kept secret. Everybody, all 
 And he said yeah, I'm actually waking up every two hours and crying. So it was a tough very stressful period. Go back to our previous topic, when's a great team most vital to for a group, a team to work well or a group of people to work well? During the period of high stress, this team was well built, they all had the same jacket, they knew each other. And over the next nine months actually the next 12 months, really, with the loss of 70% revenue, it's more than made up for by new customers. They just came pouring in. Pretty hard to resist buying a seat on an airline that's going to do 70% discounted ticket. Or in this case, sell you a 1,000 shares of Cisco for 70% less than you could do it the day before on January 14th. That's gets then to a summary. More affirmatively you've taken those eight opening thoughts on what gets in the way. And here we have a more affirmative model for you.
 
 The kind of steps, this is from John Kotter, in my view when it comes to managing then, we said that this also that the course, it really is the matter of the judgment and having a dozen or so, a couple dozen working concepts that you apply. I say all that as a intro into this particular Eight-Step model for Leading Change. Take a look at these, I recommend you grab a few like a burning platform, that's what David did. He set up this event at the hotel, look, this industry is changing e-trade is coming along, if we don't change now we're going to be out of business. There's a burning platform. And the other factors, look at number four getting buy-in, taking the top 200 people across the bridge. All part of the enactment, but look at the eight points here as guidance for your own judgement. That concludes our thinking here on the fourth and final topic of human and social capital managing people at work.
+```
