--- a/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.6 Manager's Template for Human and Social Capital.md
+++ b/03. Managing Social and Human Capital/Module 4 Designing and Changing the Organization's Architecture/4.6 Manager's Template for Human and Social Capital.md
@@ -1,89 +1,76 @@
-嗯，用户让我总结Coursera Business Foundations第三课中关于“Managing Social and Human Capital”模块的内容，特别是Week 4: Designing and Changing the Organization's Architecture的视频字幕和幻灯片。用户已经提供了多个小节的总结请求，现在又给出了第六小节的字幕，需要我进行总结和提炼关键结论。
+## Coursera 商业基础课程《管理社会与人力资本》 - 模块4 - 组织架构设计与变革
 
-首先，我需要仔细阅读用户提供的字幕文本，理解每个部分的核心内容。第六小节看起来是模块的总结部分，讲师回顾了前面提到的案例和概念，强调组织架构设计的重要性，以及如何通过管理社会与人力资本来推动变革。
+### 课程4.6 组织架构设计的系统化框架
 
-用户之前多次请求不同小节的总结，每次都需要从字幕中提取关键点，并以结构化的方式呈现。现在用户可能希望获得整个模块的全面总结，特别是第六小节作为总结部分，可能整合了前面各节的内容，需要突出核心结论。
-
-接下来，我需要分析字幕中的主要观点。讲师提到了John Chambers在思科公司的例子，强调做出良好及时的决策，以及如何选择并信任团队成员。接着，引用消防队的案例说明团队信任的重要性，指出如果成员之间缺乏信任，可能导致决策失败。然后提到Charles Elachi和Ann Livermore的例子，说明大公司如何培养决策文化，允许犯错但避免重复错误。
-
-在组织架构设计方面，讲师讨论了如何通过奖励、晋升和团队结构来激励或抑制员工行为，强调“对齐”（Alignment）的重要性。此外，还提到处理不平等问题，确保奖励与绩效紧密挂钩，避免不公平感。最后，讲师建议构建一个支持大规模团队协作的框架，并强调在变革时建立紧迫感，同时兼顾理性与情感因素。
-
-用户的学习目标包括评估不平等如何影响员工、比较不同组织结构、选择变革的关键步骤。因此，在总结时需要将这些目标贯穿其中，确保关键结论覆盖这些方面。
-
-需要注意的是，用户可能希望总结不仅涵盖第六小节，还要整合整个模块的内容，因此可能需要回顾之前各节的要点，如David Pottruck的案例、Kotter的变革八步法、薪酬与晋升的影响等，并在总结中综合呈现。
-
-最后，要确保总结结构清晰，使用适当的标题和子标题，如核心主题、关键结论、行动框架等，便于用户快速理解。同时，语言要简洁，重点突出，避免冗长。
-
-
-
-
----
-
-### **模块核心主题：组织架构设计的系统化框架**  
 通过整合思科、Hausser Foods、消防队救援案例等多元场景，构建管理者在人力与社会资本管理中的**系统性思维工具包**，聚焦架构设计、公平感知与变革韧性三大维度。
 
----
+#### 1. 决策架构：信任与赋能的平衡术
 
-### **关键结论与行动框架**
-#### **1. 决策架构：信任与赋能的平衡术**
-• **离线信任网络**：  
-  参考思科John Chambers模式，建立**影子决策委员会**（Shadow Board）——由跨层级员工组成非正式顾问团，在重大决策前提供非结构化反馈（如每月匿名"挑战者会议"）。
-• **意图传导三原则**：  
-  • **70/30法则**：70%目标明确性（如"东南亚市场份额提升15%"），30%保留执行弹性；  
-  • **红线禁区**：明确不可逾越的边界（如"不牺牲客户数据安全"）；  
-  • **失败信用证**：预设可接受的试错成本（如"允许新市场拓展首年亏损500万美元"）。
+- **离线信任网络**：  
+  - 参考思科John Chambers模式，建立**影子决策委员会**（Shadow Board）——由跨层级员工组成非正式顾问团，在重大决策前提供非结构化反馈（如每月匿名「挑战者会议」）。
+- **意图传导三原则**：  
+  - **70/30法则**：70%目标明确性（如「东南亚市场份额提升15%」），30%保留执行弹性；  
+  - **红线禁区**：明确不可逾越的边界（如「不牺牲客户数据安全」）；  
+  - **失败信用证**：预设可接受的试错成本（如「允许新市场拓展首年亏损500万美元」）。
 
-#### **2. 团队动力学：陌生协作的激活密码**
-• **消防队悖论解析**：  
-  Wagner Dodge救援失败案例揭示：**紧急情境下，关系资本 > 专业能力**。应建立：  
-  • **预联结机制**：关键岗位（如危机管理组）实施强制轮岗，确保核心成员每年共同完成至少2个模拟项目；  
-  • **信任加速器**：设计48小时生存挑战等极端场景培训，催化团队信任。
+#### 2. 团队动力学：陌生协作的激活密码
 
-#### **3. 变革韧性：架构迭代的生命周期**
-• **不平等管理仪表盘**：  
+- **消防队悖论解析**：  
+  - Wagner Dodge救援失败案例揭示：**紧急情境下，关系资本 > 专业能力**。应建立：  
+    - **预联结机制**：关键岗位（如危机管理组）实施强制轮岗，确保核心成员每年共同完成至少2个模拟项目；  
+    - **信任加速器**：设计48小时生存挑战等极端场景培训，催化团队信任。
+
+#### 3. 变革韧性：架构迭代的生命周期
+
+- **不平等管理仪表盘**：  
   监控三类公平感知指标：  
+
   | **公平维度** | **监控指标**                  | **干预阈值**          |  
   |--------------|-----------------------------|---------------------|  
   | **分配公平** | 同职级薪酬离散系数 >0.25      | 启动薪酬校准项目       |  
   | **程序公平** | 晋升申诉率同比增超30%        | 开展晋升流程透明化审计 |  
   | **互动公平** | 跨部门协作满意度 <60分       | 植入关系修复协调员角色 |  
 
-• **架构韧性指数**：  
-  通过四象限评估组织架构的环境适应力：  
+- **架构韧性指数**：  
+  通过四象限评估组织架构的环境适应力： 
+
   ```  
   韧性指数 = （客户需求响应速度 × 内部创新试错率） / （部门墙强度 × 决策层级数）  
   ```  
   **健康阈值**：指数 ≥1.5，低于1.0需启动架构重组。
 
+#### 4. 管理者工具包：三阶变革加速器
+
+1. **预热期：铸造紧迫感**
+   1. **燃烧平台2.0**：  
+      1. 超越传统危机叙事，构建**数据剧场**——将行业颠覆数据（如竞品增长率）转化为VR沉浸式体验，使抽象威胁可感化。
+   2. **幽灵推演**：  
+      1. 邀请外部行业颠覆者（如初创公司CEO）参与战略会，模拟未来3年攻防战。
+
+2. **推进期：跨维对齐**
+   1. **决策溯源系统**：  
+      1. 重要决策植入区块链存证，可追溯每位参与者的建议贡献度，破解「决策失忆症」。
+   2. **反KPI联盟**：  
+      1. 设立20%的「模糊目标」（如「重新定义客户体验」），考核标准由跨职能团队动态制定。
+
+3. **固化期：文化编码**
+   1. **仪式货币化**：  
+      1. 将关键变革仪式（如金门大桥徒步）转化为NFT徽章，纳入晋升积分体系。
+   2. **逆权威日**：  
+      1. 每月设定一天「决策反转期」，允许基层员工否决管理层非关键决策，培养变革共治感。
+
 ---
 
-### **管理者工具包：三阶变革加速器**
-#### **1. 预热期：铸造紧迫感**
-• **燃烧平台2.0**：  
-  超越传统危机叙事，构建**数据剧场**——将行业颠覆数据（如竞品增长率）转化为VR沉浸式体验，使抽象威胁可感化。
-• **幽灵推演**：  
-  邀请外部行业颠覆者（如初创公司CEO）参与战略会，模拟未来3年攻防战。
+#### 核心洞见
 
-#### **2. 推进期：跨维对齐**
-• **决策溯源系统**：  
-  重要决策植入区块链存证，可追溯每位参与者的建议贡献度，破解"决策失忆症"。
-• **反KPI联盟**：  
-  设立20%的"模糊目标"（如"重新定义客户体验"），考核标准由跨职能团队动态制定。
-
-#### **3. 固化期：文化编码**
-• **仪式货币化**：  
-  将关键变革仪式（如金门大桥徒步）转化为NFT徽章，纳入晋升积分体系。
-• **逆权威日**：  
-  每月设定一天"决策反转期"，允许基层员工否决管理层非关键决策，培养变革共治感。
+**组织架构不是设计的产物，而是集体选择的化石。**  
+真正的架构创新始于**认知破壁**——通过制造可控的决策冲突（如「影子董事会vs执行层辩论」）、设计非舒适区的协作实验（如极端场景模拟），迫使组织突破路径依赖。管理者应成为**社会资本工程师**，而非结构设计师，重点在于培育信任网络、重构权力流动模式，让架构在动态博弈中自然进化。
 
 ---
 
-### **核心洞见**
-**“组织架构不是设计的产物，而是集体选择的化石。”**  
-真正的架构创新始于**认知破壁**——通过制造可控的决策冲突（如"影子董事会vs执行层辩论"）、设计非舒适区的协作实验（如极端场景模拟），迫使组织突破路径依赖。管理者应成为**社会资本工程师**，而非结构设计师，重点在于培育信任网络、重构权力流动模式，让架构在动态博弈中自然进化。
+### 附录：字幕
 
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第三课 Managing Social and Human Capital 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题：Week 4: Designing and Changing the Organization's Architecture
@@ -112,3 +99,4 @@ And the fourth and final piece on making good and timely decisions, which is, th
 With a problem of that kind solved though, inequity is a haunting fact of the human condition, it's just there. And as a way of I'm saying, people, if it's pay, promotion, or anything else for performance, if it looks like somebody's getting promoted, or paid, or somehow treated better with a better office for performance, if they feel an unfairness has been committed by you, the manager, you got a problem here. We need to solve it.
 
 First point, gotta be aware of it, and then we gotta be, obviously very good at ensuring a very close tie between what we actually reward and what we want from people. Finally, we need to build a bigger scaffolding. We got a lot of people, more than 10 or 15, in many cases. Thousands, some companies, take Walmart, 2.2 million, we have to find ways of putting people together, organizing teams so that they work with other teams. Having done that, critical to get that right, a whole scaffolding for doing that well. We then face just a lifelong problem of needing to change, to restructure from time to time, how the design does work. For that, we've ended with a basic notion when you take a design, as a manager, that maybe you've been given, maybe you've even helped create, to get people to go with you, a burning platform, and going for their head and their heart. Probably, pretty important for your future. So may you all manage and here are some of the tools we hope that will help you do so.
+```
